<resources>
    <string name="Reward">Reward</string>
    <string name="VERTICAL_RATIO">9:16</string>
    <string name="_2_00">2:00</string>
    <string name="a_text">ऐ</string>
    <string name="a_text_message_with_a_4_digit_verification_code_was_sent_to_91_10">4 अंकों के वेरीफिकेशन कोड वाला मैसेज पर भेजा गया है</string>
    <string name="aap_text">आप</string>
    <string name="abc_action_bar_home_description">Navigate home</string>
    <string name="abc_action_bar_up_description">Navigate up</string>
    <string name="abc_action_menu_overflow_description">More options</string>
    <string name="abc_action_mode_done">Done</string>
    <string name="abc_activity_chooser_view_see_all">See all</string>
    <string name="abc_activitychooserview_choose_application">Choose an app</string>
    <string name="abc_capital_off">OFF</string>
    <string name="abc_capital_on">ON</string>
    <string name="abc_menu_alt_shortcut_label">Alt+</string>
    <string name="abc_menu_ctrl_shortcut_label">Ctrl+</string>
    <string name="abc_menu_delete_shortcut_label">delete</string>
    <string name="abc_menu_enter_shortcut_label">enter</string>
    <string name="abc_menu_function_shortcut_label">Function+</string>
    <string name="abc_menu_meta_shortcut_label">Meta+</string>
    <string name="abc_menu_shift_shortcut_label">Shift+</string>
    <string name="abc_menu_space_shortcut_label">space</string>
    <string name="abc_menu_sym_shortcut_label">Sym+</string>
    <string name="abc_prepend_shortcut_label">Menu+</string>
    <string name="abc_search_hint">Search…</string>
    <string name="abc_searchview_description_clear">Clear query</string>
    <string name="abc_searchview_description_query">Search query</string>
    <string name="abc_searchview_description_search">Search</string>
    <string name="abc_searchview_description_submit">Submit query</string>
    <string name="abc_searchview_description_voice">Voice search</string>
    <string name="abc_shareactionprovider_share_with">Share with</string>
    <string name="abc_shareactionprovider_share_with_application">Share with %s</string>
    <string name="abc_toolbar_collapse_description">Collapse</string>
    <string name="accept_all">Please accept all terms &amp; conditions.</string>
    <string name="account">अकाउंट नहीं है ?</string>
    <string name="action_settings">Settings</string>
    <string name="admob_app_id">/1007232/Aajtak_Apps/AT_And_AppExit_Interstitial</string>
    <string name="ads_text">ADVERTISEMENT</string>
    <string name="agree">I agree to single sign on for seamless experience across India Today Group sites.</string>
    <string name="alert_cancel">रद्द करें</string>
    <string name="all">सभी</string>
    <string name="allowed_location_input">abcdefghijklmnopqrstuvwxyzABCDEFGHIJKLMNOPQRSTUVWXYZ0123456789</string>
    <string name="allowed_number">1234567890</string>
    <string name="already_a_member">पहले से सदस्य हैं</string>
    <string name="already_downloading">पहले से ही एक फाइल डाउनलोड कर रहा है!!</string>
    <string name="also_read">ये भी पढ़ें-</string>
    <string name="android">android</string>
    <string name="androidx_startup">androidx.startup</string>
    <string name="any_news_btn_text">अन्य खबरें</string>
    <string name="api_error">एपीआई त्रुटि</string>
    <string name="app_describe">Podcast download</string>
    <string name="app_exit_advertisement">Advertisement</string>
    <string name="app_exit_title">जाने से पहले एक नज़र</string>
    <string name="app_exit_video">ये देखना तो नहीं भूल गए</string>
    <string name="app_name">Aaj Tak</string>
    <string name="app_uri">aajtak</string>
    <string name="appbar_scrolling_view_behavior">com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior</string>
    <string name="apply">लागू</string>
    <string name="aps_mraid_close_button">Interstitial close button</string>
    <string name="article">article</string>
    <string name="article_external_literal">item_extenal</string>
    <string name="at_breaking_news">आजतक ब्रेकिंग न्यूज़</string>
    <string name="at_page_dynamic_link">aajtak.link</string>
    <string name="aur_be">और भी</string>
    <string name="back_navigation">back_navigation</string>
    <string name="bad_stuff">खराब सामान</string>
    <string name="basic_info">मूल जानकारी</string>
    <string name="bookmark">बुकमार्क</string>
    <string name="bookmark_a_story">एक स्टोरी बुकमार्क करें</string>
    <string name="bookmark_done">बुकमार्क किया गया :)</string>
    <string name="bookmark_failure">ओह… दोबारा कोशिश करें</string>
    <string name="bookmark_removed">बुकमार्क हटाया गया</string>
    <string name="bookmarked">बुकमार्क किया गया</string>
    <string name="bookmarked_content_label">बुकमार्क कंटेंट</string>
    <string name="bottom_sheet_behavior">com.google.android.material.bottomsheet.BottomSheetBehavior</string>
    <string name="bottomsheet_action_collapse">Collapse the bottom sheet</string>
    <string name="bottomsheet_action_expand">Expand the bottom sheet</string>
    <string name="bottomsheet_action_expand_halfway">Expand halfway</string>
    <string name="bottomsheet_drag_handle_clicked">Drag handle double-tapped</string>
    <string name="bottomsheet_drag_handle_content_description">Drag handle</string>
    <string name="breaking_news">BREAKING NEWS</string>
    <string name="breaking_news_item">ब्रेकिंग न्यूज़</string>
    <string name="btm_bookmark">बुकमार्क</string>
    <string name="btm_cancel">कैंसल</string>
    <string name="btm_comment">कमेंट्</string>
    <string name="btm_download">डाउनलोड</string>
    <string name="btm_share">शेयर करें</string>
    <string name="bullet">•</string>
    <string name="camera">कैमरा</string>
    <string name="cancel">CANCEL</string>
    <string name="cast_movie">अभिनेता</string>
    <string name="cd_image">Aaj Tak Image</string>
    <string name="change_password">पासवर्ड चैन्ज करें</string>
    <string name="character_counter_content_description">Characters entered %1$d of %2$d</string>
    <string name="character_counter_overflowed_content_description">Character limit exceeded %1$d of %2$d</string>
    <string name="character_counter_pattern">%1$d/%2$d</string>
    <string name="choose_one">एक चुनें</string>
    <string name="clear_app_cache">ऐप मेमोरी क्लियर करें</string>
    <string name="clear_cache_failed">ऐप कैशे क्लीयर फेल हुआ</string>
    <string name="clear_cache_successful">सफलतापूर्वक ऐप कैशे क्लीयर हुआ</string>
    <string name="clear_text_end_icon_content_description">Clear text</string>
    <string name="cleared">क्लीयर हुआ</string>
    <string name="close_drawer">Close Drawer</string>
    <string name="close_text">Close</string>
    <string name="collapse"> संक्षिप्त करें</string>
    <string name="com.google.firebase.crashlytics.mapping_file_id">a6b4023b920b4215886bca73c4f00517</string>
    <string name="comments">कमेंट्स</string>
    <string name="common_google_play_services_enable_button">Enable</string>
    <string name="common_google_play_services_enable_text">"%1$s won't work unless you enable Google Play services."</string>
    <string name="common_google_play_services_enable_title">Enable Google Play services</string>
    <string name="common_google_play_services_install_button">Install</string>
    <string name="common_google_play_services_install_text">"%1$s won't run without Google Play services, which are missing from your device."</string>
    <string name="common_google_play_services_install_title">Get Google Play services</string>
    <string name="common_google_play_services_notification_channel_name">Google Play services availability</string>
    <string name="common_google_play_services_notification_ticker">Google Play services error</string>
    <string name="common_google_play_services_unknown_issue">%1$s is having trouble with Google Play services. Please try again.</string>
    <string name="common_google_play_services_unsupported_text">"%1$s won't run without Google Play services, which are not supported by your device."</string>
    <string name="common_google_play_services_update_button">Update</string>
    <string name="common_google_play_services_update_text">"%1$s won't run unless you update Google Play services."</string>
    <string name="common_google_play_services_update_title">Update Google Play services</string>
    <string name="common_google_play_services_updating_text">"%1$s won't run without Google Play services, which are currently updating."</string>
    <string name="common_google_play_services_wear_update_text">New version of Google Play services needed. It will update itself shortly.</string>
    <string name="common_open_on_phone">Open on phone</string>
    <string name="common_signin_button_text">Sign in</string>
    <string name="common_signin_button_text_long">Sign in with Google</string>
    <string name="comscore_id">8549097</string>
    <string name="confirm">कन्फर्म</string>
    <string name="confirm_password">पासवर्ड कन्फर्म करें</string>
    <string name="congratulation">CONGRATULATION!</string>
    <string name="contact_info">संपर्क जानकारी</string>
    <string name="contact_us">Contact US</string>
    <string name="content_sample">सरकार में फेरबदल की अटकलों के बीच योगी पहुंचे दिल्ली, मोदी-नड्डा और शाह से मिलेंगे</string>
    <string name="continue_listening">Continue Listening</string>
    <string name="continue_value">Continue</string>
    <string name="copy">Copy</string>
    <string name="copy_toast_msg">Link copied to clipboard</string>
    <string name="copyright">Copyright ©</string>
    <string name="copyright_2022_a_division_of_tv_today_network">Living Media India Limited. For reprint rights: Syndications Today</string>
    <string name="cricket_scorecard">क्रिकेट मैच</string>
    <string name="customize_sections">सेक्शन कस्टमाइज़ करें</string>
    <string name="dateofbirth">जन्मतिथि</string>
    <string name="debug_device_id">FB33B0BBBBE4D6A6512121DF4F0CBD31,ADCC9902B33F29EFA23BED0C6FFFA7E6</string>
    <string name="deeplink_default_fallback">https://aajtak.intoday.in/</string>
    <string name="deeplink_livetv_IT">www.indiatoday.in/</string>
    <string name="deeplink_podcasts">podcasts.aajtak.in</string>
    <string name="deeplink_share">aajtakapp://share</string>
    <string name="deeplinklive_share_browser">www.aajtak.in/livetv</string>
    <string name="default_time_duration">00:00</string>
    <string name="email_or_phone">ईमेल/फोन</string>
    <string name="facebook">फेसबुक</string>
    <string name="forgot_password">पासवर्ड भूल गए?</string>
    <string name="large">बड़ा</string>
    <string name="ljp_16_2021">LJP के सही दावेदार चिराग़ पासवान हैं या पशुपति पारस?: आज का दिन, 16 जून 2021</string>
    <string name="login">लॉग इन</string>
    <string name="loved_it">पसंद आया</string>
    <string name="maybe_later">शायद बाद में</string>
    <string name="medium">मीडियम</string>
    <string name="news_image">News Image</string>
    <string name="no_account">अकाउंट नहीं है?</string>
    <string name="nothing_great">कुछ खास नहीं</string>
    <string name="ok">ओके</string>
    <string name="one_network_one_account">One Network | One Account</string>
    <string name="other">अन्य</string>
    <string name="password">पासवर्ड</string>
    <string name="rate_experience">अपने अनुभव की रेटिंग करें</string>
    <string name="rate_msg">आप आजतक ऐप को कितनी रेटिंग देना चाहेंगे</string>
    <string name="rate_us">प्ले स्टोर पर रेटिंग दें</string>
    <string name="read_more">और पढ़ें</string>
    <string name="select_text_size">टेक्स्ट आकार का चयन करें</string>
    <string name="sign_up_here">साइनअप करें</string>
    <string name="small">छोटा</string>
    <string name="social_login">सोशल लॉगिन करें</string>
    <string name="terms_of_use">Terms of Use</string>
    <string name="twitter">ट्विटर</string>
    <string name="whatsapp">वॉट्सऐप</string>
    <string name="wrong_password_try_again">पासवर्ड गलत है. फिर से प्रयास करें</string>
</resources>