<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout android:layout_width="fill_parent" android:layout_height="fill_parent" android:layout_centerHorizontal="true" android:layout_centerVertical="true"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <TextView android:textSize="20.0sp" android:textStyle="normal" android:textColor="@color/black_white" android:id="@id/heading" android:padding="10.0dip" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="15.0dip" android:text="@string/select_text_size" android:layout_marginStart="25.0dip" style="@style/RobotoTextViewStyle" />
    <RadioGroup android:gravity="start" android:orientation="vertical" android:id="@id/text_size_group1" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="20.0dip" android:layout_below="@id/heading" android:layout_marginStart="25.0dip">
        <RadioButton android:theme="@style/radiobutton_text_size" android:textSize="@dimen/font_12" android:id="@id/small_text_size" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginBottom="10.0dip" android:text="@string/small" android:paddingStart="20.0dip" android:paddingEnd="@dimen/margin_20" />
        <RadioButton android:theme="@style/radiobutton_text_size" android:textSize="16.0sp" android:id="@id/medium_text_size" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginBottom="10.0dip" android:text="@string/medium" android:paddingStart="20.0dip" android:paddingEnd="@dimen/margin_20" />
        <RadioButton android:theme="@style/radiobutton_text_size" android:textSize="20.0sp" android:id="@id/large_text_size" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginBottom="10.0dip" android:text="@string/large" android:paddingStart="20.0dip" android:paddingEnd="@dimen/margin_20" />
    </RadioGroup>
    <RelativeLayout android:padding="10.0dip" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="10.0dip" android:layout_marginBottom="10.0dip" android:layout_below="@id/text_size_group1" android:layout_alignParentEnd="true">
        <TextView android:textSize="@dimen/font_14" android:textStyle="normal" android:textColor="@color/red_nav_userprof" android:layout_gravity="end|bottom|center" android:id="@id/text_cancel" android:padding="10.0dip" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/btm_cancel" android:layout_toStartOf="@id/text_ok" style="@style/RobotoTextViewStyle" />
        <TextView android:textSize="@dimen/font_14" android:textStyle="normal" android:textColor="@color/red_nav_userprof" android:layout_gravity="end|bottom|center" android:id="@id/text_ok" android:padding="10.0dip" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/ok" android:layout_marginStart="25.0dip" android:layout_marginEnd="35.0dip" android:layout_alignParentEnd="true" style="@style/RobotoTextViewStyle" />
    </RelativeLayout>
</RelativeLayout>