<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout android:layout_width="fill_parent" android:layout_height="fill_parent"
  xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto">
    <ImageView android:id="@id/iv_at_icon" android:layout_width="90.0dip" android:layout_height="72.0dip" android:layout_marginTop="50.0dip" android:src="@drawable/ic_india_today" android:contentDescription="@string/cd_image" app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toStartOf="parent" app:layout_constraintTop_toTopOf="parent" />
    <EditText android:id="@id/et_email_or_phone" android:background="@drawable/bg_box_grey" android:layout_width="fill_parent" android:layout_height="40.0dip" android:layout_marginTop="70.0dip" android:hint="@string/email_or_phone" android:inputType="phone|textEmailAddress" android:paddingStart="10.0dip" android:paddingEnd="2.0dip" android:layout_marginStart="30.0dip" android:layout_marginEnd="30.0dip" app:layout_constraintStart_toStartOf="parent" app:layout_constraintTop_toBottomOf="@id/iv_at_icon" />
    <EditText android:id="@id/et_password" android:background="@drawable/bg_box_grey" android:layout_width="fill_parent" android:layout_height="40.0dip" android:layout_marginTop="30.0dip" android:hint="@string/password" android:inputType="textPassword" android:paddingStart="10.0dip" android:paddingEnd="2.0dip" android:layout_marginStart="30.0dip" android:layout_marginEnd="30.0dip" app:layout_constraintStart_toStartOf="parent" app:layout_constraintTop_toBottomOf="@id/et_email_or_phone" />
    <TextView android:textSize="20.0sp" android:textColor="@color/red_txt_color" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="5.0dip" android:text="@string/wrong_password_try_again" app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toStartOf="parent" app:layout_constraintTop_toBottomOf="@id/et_password" />
    <Button android:textSize="18.0sp" android:textStyle="bold" android:textColor="@color/white_black" android:id="@id/btn_login" android:background="@drawable/bg_redbox_oval" android:layout_width="160.0dip" android:layout_height="40.0dip" android:layout_marginTop="50.0dip" android:text="@string/login" android:paddingStart="10.0dip" android:paddingEnd="10.0dip" app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toStartOf="parent" app:layout_constraintTop_toBottomOf="@id/et_password" />
    <TextView android:textSize="20.0sp" android:textColor="@color/red_txt_color" android:id="@id/tv_forgot_pswd" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="25.0dip" android:text="@string/forgot_password" app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toStartOf="parent" app:layout_constraintTop_toBottomOf="@id/btn_login" />
    <View android:id="@id/view_divider" android:background="@color/grey_divider" android:layout_width="fill_parent" android:layout_height="4.0dip" android:layout_marginTop="30.0dip" app:layout_constraintStart_toStartOf="parent" app:layout_constraintTop_toBottomOf="@id/tv_forgot_pswd" />
    <TextView android:textSize="22.0sp" android:textColor="@color/grey_txt_color" android:id="@id/txt_scl_login" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="30.0dip" android:text="@string/social_login" app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toStartOf="parent" app:layout_constraintTop_toBottomOf="@id/view_divider" />
    <androidx.constraintlayout.widget.ConstraintLayout android:id="@id/layout_fb_twitter" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="20.0dip" app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toStartOf="parent" app:layout_constraintTop_toBottomOf="@id/txt_scl_login">
        <ImageView android:id="@id/iv_fb_login" android:layout_width="60.0dip" android:layout_height="60.0dip" android:src="@drawable/ic_fb_login" android:contentDescription="@string/cd_image" app:layout_constraintStart_toStartOf="parent" app:layout_constraintTop_toTopOf="parent" />
        <ImageView android:layout_width="60.0dip" android:layout_height="60.0dip" android:src="@drawable/ic_fb_login" android:contentDescription="@string/cd_image" android:layout_marginStart="70.0dip" app:layout_constraintStart_toEndOf="@id/iv_fb_login" app:layout_constraintTop_toTopOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>
    <androidx.constraintlayout.widget.ConstraintLayout android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="30.0dip" app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toStartOf="parent" app:layout_constraintTop_toBottomOf="@id/layout_fb_twitter">
        <TextView android:textSize="22.0sp" android:textColor="@color/black_white" android:id="@id/txt_no_account" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/no_account" app:layout_constraintStart_toStartOf="parent" app:layout_constraintTop_toTopOf="parent" />
        <TextView android:textSize="22.0sp" android:textColor="@color/red_txt_color" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/sign_up_here" android:layout_marginStart="5.0dip" app:layout_constraintStart_toEndOf="@id/txt_no_account" app:layout_constraintTop_toTopOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.constraintlayout.widget.ConstraintLayout>