<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:background="@color/color_darkgray" android:layout_width="fill_parent" android:layout_height="178.0dip"
  xmlns:android="http://schemas.android.com/apk/res/android" xmlns:card_view="http://schemas.android.com/apk/res-auto">
    <androidx.cardview.widget.CardView android:layout_width="fill_parent" android:layout_height="fill_parent" android:layout_margin="16.0dip" card_view:cardCornerRadius="4.0dip" card_view:cardElevation="0.0dip">
        <FrameLayout android:layout_width="fill_parent" android:layout_height="fill_parent">
            <ImageView android:layout_gravity="end" android:id="@id/experience_close" android:background="@drawable/circular_red" android:padding="2.0dip" android:layout_width="16.0dip" android:layout_height="16.0dip" android:layout_marginTop="8.0dip" android:src="@drawable/ic_close_white" android:contentDescription="@string/close_drawer" android:layout_marginEnd="8.0dip" />
            <RelativeLayout android:id="@id/query_layout" android:visibility="visible" android:layout_width="fill_parent" android:layout_height="fill_parent" android:layout_marginTop="16.0dip">
                <TextView android:textSize="16.0sp" android:textStyle="bold" android:textColor="@color/black_white" android:gravity="center_horizontal" android:id="@id/experience_title" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/rate_experience" android:layout_centerHorizontal="true" android:lineSpacingExtra="4.0sp" />
                <TextView android:textSize="12.0sp" android:textColor="@color/black_white" android:gravity="center_horizontal" android:id="@id/experience_sub_title" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="8.0dip" android:text="@string/rate_msg" android:layout_below="@id/experience_title" android:layout_centerHorizontal="true" android:lineSpacingExtra="4.0sp" />
                <LinearLayout android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_below="@id/experience_sub_title" android:layout_alignParentBottom="true">
                    <TextView android:textSize="12.0sp" android:textStyle="bold" android:textColor="#ff56b858" android:gravity="center" android:id="@id/txt_happy" android:layout_width="0.0dip" android:layout_height="60.0dip" android:layout_marginTop="8.0dip" android:text="@string/loved_it" android:drawableTop="@drawable/ic_smile" android:drawablePadding="-8.0dip" android:layout_weight="1.0" android:lineSpacingExtra="8.0sp" android:textAllCaps="true" />
                    <View android:background="@color/color_darkgray" android:layout_width="1.0dip" android:layout_height="fill_parent" android:layout_marginTop="8.0dip" android:layout_marginBottom="8.0dip" />
                    <TextView android:textSize="12.0sp" android:textStyle="bold" android:textColor="#ffdc554d" android:gravity="center" android:id="@id/txt_angry" android:layout_width="0.0dip" android:layout_height="60.0dip" android:layout_marginTop="8.0dip" android:text="@string/nothing_great" android:drawableTop="@drawable/ic_sad" android:drawablePadding="-8.0dip" android:layout_weight="1.0" android:lineSpacingExtra="8.0sp" android:textAllCaps="true" />
                </LinearLayout>
            </RelativeLayout>
            <RelativeLayout android:id="@id/rate_us_layout" android:visibility="invisible" android:layout_width="fill_parent" android:layout_height="fill_parent" android:layout_marginTop="16.0dip">
                <com.android.kotlinbase.customize.CustomFontButton android:textSize="16.0sp" android:textStyle="bold" android:textColor="#ffffffff" android:id="@id/rate_us_on_play_store_or_feedback" android:background="@drawable/button_background" android:paddingLeft="24.0dip" android:paddingRight="24.0dip" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginLeft="16.0dip" android:layout_marginTop="16.0dip" android:layout_marginRight="16.0dip" android:foreground="?android:selectableItemBackground" android:text="@string/rate_us" android:drawablePadding="16.0dip" android:layout_centerHorizontal="true" android:drawableStart="@drawable/ic_hand" style="@style/Widget.AppCompat.Button.Colored" />
                <TextView android:textStyle="bold" android:textColor="@color/black_white" android:id="@id/may_be_later" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="16.0dip" android:text="@string/maybe_later" android:layout_below="@id/rate_us_on_play_store_or_feedback" android:layout_centerHorizontal="true" />
            </RelativeLayout>
        </FrameLayout>
    </androidx.cardview.widget.CardView>
</LinearLayout>