<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout android:padding="4.0dip" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="10.0dip"
  xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto">
    <androidx.constraintlayout.widget.ConstraintLayout android:id="@id/clMainHeaderlist" android:layout_width="fill_parent" android:layout_height="wrap_content" app:layout_constraintStart_toStartOf="parent" app:layout_constraintTop_toTopOf="parent">
        <ImageView android:id="@id/ivPodcastDetailImage" android:layout_width="@dimen/podcast_detail_image" android:layout_height="@dimen/podcast_detail_image" android:layout_marginTop="4.0dip" android:scaleType="centerCrop" android:contentDescription="@string/cd_image" android:layout_marginStart="4.0dip" app:layout_constraintStart_toStartOf="parent" app:layout_constraintTop_toTopOf="parent" />
        <ImageView android:id="@id/ivPodcastPlaystatusListing" android:layout_width="@dimen/podcast_landing_play_status" android:layout_height="@dimen/podcast_landing_play_status" android:layout_marginBottom="@dimen/margin_5" android:src="@drawable/ic_play_icon_light_opactity" android:contentDescription="@string/news_image" android:layout_marginEnd="5.0dip" app:layout_constraintBottom_toBottomOf="@id/ivPodcastDetailImage" app:layout_constraintEnd_toEndOf="@id/ivPodcastDetailImage" />
        <TextView android:textSize="@dimen/podcast_detail_title_font" android:textStyle="bold" android:textColor="@color/black_white" android:id="@id/tvPodcastDetailTitle" android:layout_width="0.0dip" android:layout_height="wrap_content" android:text="@string/ljp_16_2021" android:layout_marginStart="10.0dip" app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toEndOf="@id/ivPodcastDetailImage" app:layout_constraintTop_toTopOf="parent" />
        <include android:id="@id/btnPodcastDetailSubscribe" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="10.0dip" android:layout_marginStart="10.0dip" app:layout_constraintStart_toEndOf="@id/ivPodcastDetailImage" app:layout_constraintTop_toBottomOf="@id/tvPodcastDetailTitle" layout="@layout/btn_subscribe_red_bg_ovel" />
    </androidx.constraintlayout.widget.ConstraintLayout>
    <include android:id="@id/layoutPodcaster" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="8.0dip" app:layout_constraintTop_toBottomOf="@id/clMainHeaderlist" layout="@layout/layout_podcast_detail_podcaster_item" />
    <com.android.kotlinbase.customize.ExpandableTextViewExtended android:textSize="@dimen/podcast_detail_description_font" android:textColor="@color/black_white" android:textColorLink="@color/color_hintblue" android:id="@id/tvPodcastDesc" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="10.0dip" app:collapseText="@string/collapse" app:expandCollapseTextColor="\#d22129" app:expandText="@string/read_more" app:layout_constraintStart_toStartOf="parent" app:layout_constraintTop_toBottomOf="@id/layoutPodcaster" />
</androidx.constraintlayout.widget.ConstraintLayout>