<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout android:layout_gravity="bottom" android:background="@color/white_black" android:layout_width="fill_parent" android:layout_height="wrap_content"
  xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto">
    <TextView android:textSize="@dimen/font_12" android:textStyle="bold" android:textColor="@color/black_white" android:gravity="center" android:id="@id/tvFacebook" android:background="?selectableItemBackground" android:padding="@dimen/margin_12" android:layout_width="0.0dip" android:layout_height="wrap_content" android:text="@string/facebook" android:drawableTop="@drawable/ic_facebook_share" android:drawablePadding="@dimen/margin_10" android:layout_weight="1.0" app:layout_constraintEnd_toStartOf="@id/tvWhatsapp" app:layout_constraintStart_toStartOf="parent" app:layout_constraintTop_toTopOf="parent" />
    <TextView android:textSize="@dimen/font_12" android:textStyle="bold" android:textColor="@color/black_white" android:gravity="center" android:id="@id/tvWhatsapp" android:background="?selectableItemBackground" android:padding="@dimen/margin_12" android:layout_width="0.0dip" android:layout_height="wrap_content" android:text="@string/whatsapp" android:drawableTop="@drawable/ic_whtsapp_share" android:drawablePadding="@dimen/margin_10" android:layout_weight="1.0" app:layout_constraintEnd_toStartOf="@id/tvTwitter" app:layout_constraintStart_toEndOf="@id/tvFacebook" app:layout_constraintTop_toTopOf="parent" />
    <TextView android:textSize="@dimen/font_12" android:textStyle="bold" android:textColor="@color/black_white" android:gravity="center" android:id="@id/tvTwitter" android:background="?selectableItemBackground" android:padding="@dimen/margin_12" android:layout_width="0.0dip" android:layout_height="wrap_content" android:text="@string/twitter" android:drawableTop="@drawable/ic_twitter_share" android:drawablePadding="@dimen/margin_10" android:layout_weight="1.0" app:layout_constraintEnd_toStartOf="@id/tvOther" app:layout_constraintStart_toEndOf="@id/tvWhatsapp" app:layout_constraintTop_toTopOf="parent" />
    <TextView android:textSize="@dimen/font_12" android:textStyle="bold" android:textColor="@color/black_white" android:gravity="center" android:id="@id/tvOther" android:background="?selectableItemBackground" android:padding="@dimen/margin_12" android:layout_width="0.0dip" android:layout_height="wrap_content" android:text="@string/other" android:drawableTop="@drawable/ic_other_share" android:drawablePadding="@dimen/margin_10" android:layout_weight="1.0" app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toEndOf="@id/tvTwitter" app:layout_constraintTop_toTopOf="parent" />
    <TextView android:textSize="@dimen/font_22" android:textStyle="bold" android:textColor="@color/strawberry" android:id="@id/tvCancel" android:background="?selectableItemBackground" android:padding="@dimen/margin_8" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/btm_cancel" app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toStartOf="parent" app:layout_constraintTop_toBottomOf="@id/tvOther" />
</androidx.constraintlayout.widget.ConstraintLayout>