<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:orientation="vertical" android:layout_width="fill_parent" android:layout_height="wrap_content"
  xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto">
    <LinearLayout android:orientation="vertical" android:background="@color/itg_black_white_bg" android:layout_width="fill_parent" android:layout_height="wrap_content">
        <com.itg.ssosdk.customView.AppTextView android:textSize="12.0sp" android:textColor="@color/itg_black_white_txt" android:gravity="center" android:layout_gravity="center" android:paddingLeft="5.0dip" android:paddingTop="5.0dip" android:paddingRight="5.0dip" android:paddingBottom="5.0dip" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/one_network_one_account" app:appCustomFontStyle="bold" />
        <androidx.appcompat.widget.LinearLayoutCompat android:gravity="center" android:paddingLeft="5.0dip" android:paddingTop="5.0dip" android:paddingRight="5.0dip" android:paddingBottom="5.0dip" android:layout_width="fill_parent" android:layout_height="wrap_content">
            <com.itg.ssosdk.customView.AppTextView android:textSize="14.0sp" android:textColor="@color/itg_red" android:layout_gravity="center" android:id="@id/tv_terms" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/terms_of_use" />
            <com.itg.ssosdk.customView.AppTextView android:textSize="14.0sp" android:textColor="@color/itg_red" android:layout_gravity="center" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginLeft="10.0dip" android:layout_marginRight="10.0dip" android:text="•" />
            <com.itg.ssosdk.customView.AppTextView android:textSize="14.0sp" android:textColor="@color/itg_red" android:layout_gravity="center" android:id="@id/tv_contactus" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/contact_us" />
        </androidx.appcompat.widget.LinearLayoutCompat>
    </LinearLayout>
    <com.itg.ssosdk.customView.AppTextView android:textSize="12.0sp" android:textColor="@color/itg_white" android:gravity="center" android:layout_gravity="center" android:id="@id/tv_footer_copyright" android:background="@color/itg_black" android:paddingLeft="10.0dip" android:paddingTop="10.0dip" android:paddingRight="10.0dip" android:paddingBottom="10.0dip" android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="@string/copyright_2022_a_division_of_tv_today_network" />
</LinearLayout>